--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,8 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.6.10'
     repositories {
         google()
-        jcenter()
-    }
+        mavenCentral()
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
@@ -14,13 +13,15 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
+}
+subprojects {
     project.evaluationDependsOn(':app')
 }
 
